Add audible tabs at the top of the page.

--- a/tabist/tabs.html
+++ b/tabist/tabs.html
@@ -9,8 +9,7 @@
 
 <body id="body">
   <h1>Tabist</h1>
-  <div id="content">
-  </div>
+  <div id="content"></div>
   <h3 id="version"></h3>
 </body>
 
