add the controls html for group_by

--- a/tabist/tabs.html
+++ b/tabist/tabs.html
@@ -9,6 +9,12 @@
 
 <body id="body">
   <h1>Tabist</h1>
+  <div id="controls">
+  	<h3>Group By</h3>
+  	<input type="radio" name="group_by_radiobutton" id="gb_as_ordered" value="As Ordered" text="As Ordered">As Ordered</input>
+  	</br>
+  	<input type="radio" name="group_by_radiobutton" id="gb_domain" value="By Domain">By Domain</input>
+  </div>
   <div id="content"></div>
   <h3 id="version"></h3>
 </body>
