--- a/tabist/tabs.html
+++ b/tabist/tabs.html
@@ -17,6 +17,7 @@
   </div>
   <div id="content"></div>
   <h3 id="version"></h3>
+  <h4 id="developmentStatus"></h3>
 </body>
 
 <script src="tabs.js"></script>
