--- a/tabist/tabs.html
+++ b/tabist/tabs.html
@@ -13,7 +13,8 @@
   	<h3>Group By</h3>
   	<input type="radio" name="group_by_radiobutton" id="gb_as_ordered" value="As Ordered" text="As Ordered">As Ordered</input>
   	</br>
-  	<input type="radio" name="group_by_radiobutton" id="gb_domain" value="By Domain">By Domain</input>
+  	<input type="radio" name="group_by_radiobutton" id="gb_domain" value="By Domain">By Domain</input></br>
+    <a id="options_link" href="options.html">Options</a>
   </div>
   <div id="content"></div>
   <h3 id="version"></h3>
