Move tab backup and restore to the options page
Updated the webpack config to compile the options page as well

--- a/tabist/options.html
+++ b/tabist/options.html
@@ -29,6 +29,13 @@
 
       <button type="submit">Save Options</button>
     </form>
+
+  	<button id="backup_tabs">Backup Tabs</button>
+    <br>
+  	<button id="restore_tabs">Restore Tabs</button>
+    <br>
+  	<input type="file" id="restore_tabs_file" display="none"></input>
+    <br>
 </body>
 
 <script src="options.js"></script>
