Finalize the json backup feature

--- a/tabist/options.html
+++ b/tabist/options.html
@@ -34,7 +34,7 @@
     <br>
   	<button id="restore_tabs">Restore Tabs</button>
     <br>
-  	<input type="file" id="restore_tabs_file" display="none"></input>
+  	<input type="file" id="restore_tabs_file" style="display:none"></input>
     <br>
 </body>
 
