Add feedback link to the github repository
closes bug #13

--- a/tabist/tabs.html
+++ b/tabist/tabs.html
@@ -19,6 +19,7 @@
   <div id="content"></div>
   <h3 id="version"></h3>
   <h4 id="developmentStatus"></h3>
+  <a href="https://github.com/fiveNinePlusR/tabist/issues">Problems? Suggestions? Report feedback or issues here</a>
 </body>
 
 <script src="tabs.js"></script>
