Add some buttons for order by

--- a/tabist/tabs.html
+++ b/tabist/tabs.html
@@ -14,6 +14,13 @@
   	<input type="radio" name="group_by_radiobutton" id="gb_as_ordered" value="As Ordered" text="As Ordered">As Ordered</input>
   	</br>
   	<input type="radio" name="group_by_radiobutton" id="gb_domain" value="By Domain">By Domain</input></br>
+  	<h3>Order By</h3>
+  	<input type="radio" name="order_by_radiobutton" id="orderby_natural" value="As Opened" text="As Opened">As Opened</input>
+  	</br>
+  	<input type="radio" name="order_by_radiobutton" id="orderby_reverse" value="Reverse Order" text="Reverse Order">Reverse Order</input>
+  	</br>
+  	<input type="radio" name="order_by_radiobutton" id="orderby_mru" value="Most Recently Used" text="Most Recently Used">Most Recently Used</input>
+  	</br>
     <a id="options_link" href="options.html">Options</a>
   </div>
   <div id="content"></div>
