add refresh button for when it's a sidebar action.

--- a/tabist/tabs.html
+++ b/tabist/tabs.html
@@ -12,6 +12,8 @@
 <body id="body">
 <div class="container">
   <h1>Tabist</h1>
+  <a class="btn btn-secondary" id="refresh_link" >Refresh</a>
+  <hr>
   <div id="controls" class="container">
     <div class="row" class="controls-selections">
       <div class="col-sm-5">
