make the grouping and display options at the top of the page hidden by default

--- a/tabist/tabs.html
+++ b/tabist/tabs.html
@@ -13,6 +13,7 @@
 <div class="container">
   <h1>Tabist</h1>
   <a class="btn btn-secondary" id="refresh_link" >Refresh</a>
+  <a class="btn btn-secondary" id="display_options_link" >Show Options</a>
   <hr>
   <div id="controls" class="container">
     <div class="row" class="controls-selections">
@@ -32,10 +33,14 @@
         <br>
       </div>
     </div>
-    <a class="btn btn-secondary" id="options_link" href="options.html">Options</a>
+    <a class="btn btn-secondary" id="options_link" href="options.html">Preferences</a>
     <hr>
   </div>
   <div id="content"></div>
+
+  <hr>
+
+
   <h3 id="version"></h3>
   <h4 id="developmentStatus"></h4>
   <a href="https://github.com/fiveNinePlusR/tabist/issues">Problems? Suggestions? Report feedback or issues here</a>
