Group by domain working.
TODO fix some wording and refactor it a bit.

--- a/tabist/options.html
+++ b/tabist/options.html
@@ -10,21 +10,22 @@
 
   <body id="body">
     <h1>Tabist Options</h1>
-    <a href="tabs.html" class="btn btn-secondary">Back</a>
+    <a href="tabs.html" class="btn btn-secondary back-button">Back to Tabist</a>
     <div id="form">
       <form>
         <label>Close Tabist Tab After Clicking on a Link:<input type="checkbox" id="close_tab"></label>
 
-        <br>
-        <label>Pin Tabist Tab:<input type="checkbox" id="pin_tab"/></label>
+        <!-- <br>
+             <label>Pin Tabist Tab:<input type="checkbox" id="pin_tab"/></label>
+        -->
         <br>
 
         <label>Auto Refresh:<input type="checkbox" id="autorefresh_tab"/></label>
         <br>
 
-        <label>Use as New Tab Page:<input type="checkbox" id="newtab_tab"/></label>
-        <br>
-
+        <!-- <label>Use as New Tab Page:<input type="checkbox" id="newtab_tab"/></label>
+             <br>
+        -->
         <label>Show Domain Name:<input type="checkbox" id="show_domain_tab"/></label>
         <br>
 
@@ -33,7 +34,7 @@
     </div>
 
       <div class="backup-restore-div">
-        <h2>Tab Backup and Restore</h2>
+        <h2>Tab Backup and Restore (Experimental)</h2>
   	    <button class="btn btn-secondary" id="backup_tabs">Backup Tabs</button>
   	    <button class="btn btn-secondary" id="restore_tabs">Restore Tabs</button>
         <br>
