--- a/tabist/tabs.html
+++ b/tabist/tabs.html
@@ -23,7 +23,7 @@
         <br>
         <input type="checkbox" name="group_by_radiobutton" class="form-check-input" id="gb_domain" value="By Domain">By Domain</input><br>
       </div>
-      <div class="col-sm-5">
+      <div style="display: none" class="col-sm-5">
         <h3>Order By</h3>
         <input type="radio" name="order_by_radiobutton" class="form-check-input" id="orderby_natural" value="As Opened" text="As Opened">As Opened</input>
         <br>
