initial move to react for displaying links.
todo a handle options and re-rendering

--- a/tabist/tabs.html
+++ b/tabist/tabs.html
@@ -36,6 +36,7 @@
     <a class="btn btn-secondary" id="options_link" href="options.html">Preferences</a>
     <hr>
   </div>
+  <div id="reacttest"></div>
   <div id="content"></div>
 
   <hr>
