show how often the tab list is refreshed

--- a/tabist/tabs.html
+++ b/tabist/tabs.html
@@ -15,6 +15,8 @@
   <a class="btn btn-secondary" id="refresh_link" >Refresh</a>
   <a class="btn btn-secondary" id="display_options_link" >Show Options</a>
   <hr>
+  <h3 id="refreshcount"></h3>
+  <hr>
   <div id="controls" class="container">
     <div class="row" class="controls-selections">
       <div class="col-sm-5">
